# A3-Twitch

./: .env.example  .gitignore  CLAUDE.md  README.md  blacklist_mots.json  config.py  main.py  pyproject.toml  schema_heidisql.sql  schema_postgresql.sql
.github/workflows/: ci.yml
Watcher/: tchatDispatcher.py
cache/: emotes_c298485860a4.json
docker/: Dockerfile  docker-compose.yml  start.sh
docs/: PRESENTATION.html  PRESENTATION.md  database_schema.sql  init_deploy.sql
scripts/: backup_db.ps1  register_backup_task.ps1
sql/: schema_heidisql.sql  schema_postgresql.sql
src/: requirements.txt
src/a3/: config.py  main.py
src/a3/Twitch/: mainTwitch.py  multi.py
src/a3/Twitch/Brain/: databaseHandler.py  decisions.py  mainBrainTwitch.py  postgresHandler.py  streamCapture.py  structuredLogger.py
src/a3/Twitch/Renderer/: mainRendererTwitch.py
src/a3/Twitch/Watcher/: mainWatcherTwitch.py  streamMetadata.py
src/a3/Twitch/Watcher/filtres/: Watcherfiltrerepetition.py  watcherFiltreAnomalies.py  watcherFiltreAudioVolume.py  watcherFiltreBase.py  watcherFiltreClipActivity.py  watcherFiltreEmoteDensity.py  watcherFiltreEmotions.py  watcherFiltreMessageRate.py  watcherFiltreRepetition.py  watcherFiltreUniqueAuthors.py
src/a3/Twitch/tests/: test_filtres_live.py
src/a3/utils/: privacy.py
src/cache/: emotes_713a7fb267f6.json  emotes_79637d2998f1.json  emotes_a003145ff9cf.json
tests/: conftest.py  test_brain.py
