[project]
name = "a3"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "discord.py>=2.4.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "twitchio==2.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 220
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
